worked on alignment issue

--- a/styles/Locuscare/Locuscare.scss
+++ b/styles/Locuscare/Locuscare.scss
@@ -1276,7 +1276,17 @@ display:none;
         width:100% !important
         // user-select: none;
     }
-
+    .quickmobile
+    {
+        padding:15px 30px;
+    }
+    .about
+    {
+        padding:15px 30px;
+    }
+   .notification{
+        padding:15px 30px;
+   }
     .family {
         margin-top: 9px !important;
     }
